--- a/W14-Sharp/W14-Sharp_coding_language/W14-Sharp_coding_language.csproj
+++ b/W14-Sharp/W14-Sharp_coding_language/W14-Sharp_coding_language.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>W14_Sharp_coding_language</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
 </Project>
